<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sixwhits</groupId>
  <artifactId>coherence-mvcc</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
  	<dependency>
  		<groupId>com.oracle</groupId>
  		<artifactId>coherence</artifactId>
  		<version>3.7.1.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.littlegrid</groupId>
  		<artifactId>littlegrid</artifactId>
  		<version>2.5.1</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.10</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  	  <groupId>org.hamcrest</groupId>
  	  <artifactId>hamcrest-all</artifactId>
  	  <version>1.1</version>
  	  <scope>test</scope>
  	</dependency>
  	<dependency>
  	  <groupId>commons-lang</groupId>
  	  <artifactId>commons-lang</artifactId>
  	  <version>2.6</version>
  	  <scope>test</scope>
  	</dependency>
  	<dependency>
  	  <groupId>org.mockito</groupId>
  	  <artifactId>mockito-core</artifactId>
  	  <version>1.9.0</version>
  	  <scope>test</scope>
  	</dependency>
  </dependencies>
  <build>
  	<plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
		<version>2.3.2</version>
		<configuration>
	      <source>1.6</source>
	      <target>1.6</target>
		</configuration>
	  </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.11</version>
        <configuration>
            <argLine>-Xmx3g -XX:MaxPermSize=1g -Dtangosol.pof.enabled=true</argLine>
            <forkMode>always</forkMode>
            <runOrder>reversealphabetical</runOrder>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.0</version>
        <configuration>
          <locales>en</locales>
          <reportPlugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>cobertura-maven-plugin</artifactId>
              <version>2.5.1</version>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-report-plugin</artifactId>
              <version>2.12</version>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.8.1</version>
            </plugin>
          </reportPlugins>
        </configuration>
      </plugin>
  	</plugins>
  </build>
</project>